# ratmail

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ratmail.toml.example
.cargo/: config.toml
.github/workflows/: release.yml
crates/ratatui-explorer/: Cargo.toml  README.md
crates/ratatui-explorer/examples/: basic.rs  file_preview.rs  light_and_dark_theme.rs
crates/ratatui-explorer/src/: file_explorer.rs  widget.rs
crates/ratmail-content/: Cargo.toml
crates/ratmail-content/src/: lib.rs
crates/ratmail-core/: Cargo.toml
crates/ratmail-core/src/: lib.rs
crates/ratmail-mail/: Cargo.toml
crates/ratmail-mail/src/: lib.rs
crates/ratmail-render/: Cargo.toml
crates/ratmail-render/src/: lib.rs
crates/ratmail-tui/: Cargo.toml
crates/ratmail-tui/src/: app_lifecycle_mod.rs  cli.rs  cli_command_handlers.rs  cli_config.rs  cli_guards.rs  cli_message_filters.rs  cli_runtime_helpers.rs  cli_setup.rs  compose_actions_mod.rs  compose_buffer_mod.rs  compose_mod.rs  input_compose_mod.rs  input_main_mod.rs  input_overlay_mod.rs  list_state_mod.rs  main.rs  message_actions_mod.rs  message_parse_mod.rs  multi_app_mod.rs  overlay_mod.rs  picker_actions_mod.rs  render_mod.rs  render_state_mod.rs  sync_mod.rs  ui_theme_mod.rs  util_mod.rs
migrations/: 001_init.sql  002_bodies.sql  003_cache_html.sql  004_cache_tiles.sql  005_add_imap_uid.sql  006_messages_uid_index.sql  007_cache_tiles_height_fix.sql  008_messages_uid_unique.sql  009_folder_sync_state.sql  010_add_message_date_ts.sql  011_add_message_recipients.sql
scripts/: linux-release.sh  macos-release.sh  release-gh.sh
skills/claude/ratmail-cli/: SKILL.md
skills/openai/ratmail-cli/agents/: openai.yaml
