[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
ammonia = "3.3"
base64 = "0.22"
html2text = "0.12"
linkify = "0.10"
mailparse = "0.15"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
