[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
ammonia = "3.3"
base64 = "0.22"
html2text = "0.12"
linkify = "0.10"
mailparse = "0.15"
serde = { version = "1.0", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
ratatui-image = { version = "9.0.0", default-features = false, features = ["crossterm", "image-defaults"] }
headless_chrome = "1.0.17"
open = "5.3"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls", "builder", "smtp-transport", "rustls-tls"] }
toml = "0.8"
tui-textarea = { version = "0.7", default-features = false, features = ["crossterm"] }
tokio = { version = "1.43", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
