[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
ammonia = "3.3"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["pkcs8", "pem", "rand_core"] }
rand_core = "0.6"
pkcs8 = { version = "0.10", features = ["pem"] }
clap = { version = "4.5", features = ["derive"] }
html2text = "0.12"
html-escape = "0.2"
linkify = "0.10"
mailparse = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
mime = "0.3"
mime_guess = "2.0"
zip = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
imap = "3.0.0-alpha.15"
imap-proto = "0.16"
native-tls = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
ratatui-image = { version = "10.0.4", default-features = false, features = ["crossterm", "image-defaults"] }
headless_chrome = "1.0.17"
open = "5.3"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls", "builder", "smtp-transport", "rustls-tls"] }
toml = "0.8"
shell-words = "1.1"
unicode-width = "0.2"
spellbook = "0.3.5"
## tui-textarea removed temporarily to allow ratatui 0.30 + ratatui-image 10.0.4
tokio = { version = "1.43", features = ["full"] }
ratatui = "0.30"
crossterm = "0.28"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
