[package]
name = "ratmail-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
sqlx.workspace = true
mailparse.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true
