[package]
name = "ratmail-mail"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
lettre.workspace = true
imap.workspace = true
imap-proto.workspace = true
mailparse.workspace = true
chrono.workspace = true

ratmail-core = { path = "../ratmail-core" }
