[package]
name = "ratmail-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
async-trait.workspace = true
image.workspace = true
headless_chrome.workspace = true
base64.workspace = true

ratmail-core = { path = "../ratmail-core" }
