[package]
name = "ratmail"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tokio.workspace = true

ratmail-core = { path = "../ratmail-core" }
ratmail-content = { path = "../ratmail-content" }
ratmail-mail = { path = "../ratmail-mail" }
ratmail-render = { path = "../ratmail-render" }

[[bin]]
name = "ratmail"
path = "src/main.rs"
