[package]
name = "ratmail"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tokio.workspace = true
linkify.workspace = true
clap.workspace = true
serde_json.workspace = true
shell-words.workspace = true
base64.workspace = true
unicode-width.workspace = true
spellbook.workspace = true
html-escape.workspace = true

ratmail-core = { path = "../ratmail-core" }
ratmail-content = { path = "../ratmail-content" }
ratmail-mail = { path = "../ratmail-mail" }
ratmail-render = { path = "../ratmail-render" }
ratatui-image.workspace = true
image.workspace = true
open.workspace = true
toml.workspace = true
mailparse.workspace = true
mime_guess.workspace = true
zip.workspace = true
ratatui-explorer = { path = "../ratatui-explorer" }

[[bin]]
name = "ratmail"
path = "src/main.rs"
